# PaddleOCR-Quant

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: api.md  architecture.md  extraction.md  ocr.md  roadmap.md
fixtures/: seed_company_metrics.json
fixtures/financials/: 0700.HK_2025_AR.json  600519.SH_2025_AR.json  AAPL_2025_10K.json
fixtures/mock_ocr/: apple_2023_annual_report.json  moutai_2023_annual_report.json  tencent_2023_annual_report.json
src/paddleocr_quant/: __init__.py  bootstrap.py  cli.py  crawlers.py  extraction.py  ingestion.py  main.py  models.py  normalization.py  normalizer.py  ocr.py  parser.py  pdf.py  retrieval.py  scoring.py  seeds.py  settings.py  storage.py
tests/: conftest.py  test_api.py  test_extraction.py  test_normalization.py  test_normalizer.py  test_parser.py  test_scoring.py
tmp_manual_check/: check.db
