[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paddleocr-quant"
version = "0.1.0"
description = "MVP scaffold for financial report analysis with FastAPI and Typer."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "typer>=0.12,<1.0",
  "uvicorn[standard]>=0.30,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "httpx>=0.27,<1.0"
]

[project.scripts]
poq = "paddleocr_quant.cli:app"
paddleocr-quant = "paddleocr_quant.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/paddleocr_quant"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
